# DopePad

./: Cargo.toml  README.md  test  test.dopedpad.json
docs/: ARCHITECTURE.md  DEV_NOTES.md  FILE_FORMAT.md  KEYBINDINGS.md
scripts/: install-path.sh  uninstall.sh
src/: lib.rs  main.rs
src/app/: mod.rs
src/core/: buffer.rs  commands.rs  mod.rs
src/input/: mod.rs
src/io/: filesystem.rs  mod.rs
src/ui/: mod.rs
