[package]
name = "dopepad"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tui-textarea = "0.7"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.15"
